# neural_ants

./: .clang-format  .clang-tidy  .gitignore  .tool-versions  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.md  TODO.md  ant.cpp  ant.hpp  brain.cpp  brain.hpp  food.cpp  food.hpp  genome.cpp  genome.hpp  main.cpp  neural_network.cpp  neural_network.hpp  neuron.cpp  neuron.hpp  population.cpp  population.hpp  raylibmathex.c  resources.cpp  resources.hpp  surroundings.cpp  surroundings.hpp  tasks.md  texture_cache.hpp  world.cpp  world.hpp
include/: ant.hpp  ant_renderer.hpp  brain.hpp  fitness_data.hpp  food.hpp  game.hpp  genome.hpp  input.hpp  neural_network.hpp  neuron.hpp  pangenome.hpp  population.hpp  random_generator.hpp  raylibdrawex.h  raylibmathex.h  resources.hpp  surroundings.hpp  texture_cache.hpp  ui.hpp  world.hpp
include/containers/: circular_stats.hpp  indexed_map.hpp
include/tests/helpers/: benchmark_reporter.hpp
include/ui/: buttons.hpp  renderer.hpp  state.hpp
include/ui/behaviors/: maximizable.hpp  textured.hpp
include/ui/menu/: fitness.hpp  fitness_display.hpp  save_load.hpp  settings.hpp
include/util/: file.hpp  math.hpp  serialization.hpp
src/: ant.cpp  ant_renderer.cpp  brain.cpp  fitness_data.cpp  food.cpp  game.cpp  genome.cpp  input.cpp  main.cpp  neural_network.cpp  neuron.cpp  pangenome.cpp  population.cpp  raylibdrawex.c  raylibmathex.c  resources.cpp  surroundings.cpp  texture_cache.cpp  ui.cpp  world.cpp
src/tests/helpers/: benchmark_reporter.cpp
src/ui/: buttons.cpp  renderer.cpp  state.cpp
src/ui/behaviors/: maximizer.cpp  textured.cpp
src/ui/menu/: fitness_display.cpp  save_load.cpp  settings.cpp
src/util/: file.cpp  serialization.cpp
tests/: main_test.cpp
tests/benchmark/: benchmark_base.cpp  benchmark_base.hpp
tests/benchmark/neural_network/: neural_network_benchmark_base.cpp  neural_network_benchmark_base.hpp  neural_network_benchmark_network_only.cpp  neural_network_benchmark_neuron_only.cpp  neural_network_benchmark_nonthreaded.cpp  neural_network_benchmark_threaded.cpp
tests/benchmark/neuron/: neuron_benchmark_base.cpp  neuron_benchmark_base.hpp  neuron_benchmark_nonthreaded.cpp  neuron_benchmark_threaded.cpp
tests/benchmark/population/: population_benchmark_base.cpp  population_benchmark_base.hpp  population_benchmark_nonthreaded.cpp
tests/unit/ant/: ant_equality.cpp  ant_serialization.cpp
tests/unit/containers/: circular_stats_add_data.cpp  circular_stats_clear.cpp  circular_stats_custom_types.cpp  circular_stats_edge_cases.cpp  circular_stats_initialization.cpp  circular_stats_max_data_points.cpp
tests/unit/food/: food_copy_and_move.cpp  food_eat.cpp  food_equality.cpp  food_initialization.cpp  food_serialization.cpp  food_test_helper.hpp
tests/unit/game/: game_camera.cpp  game_save_load.cpp
tests/unit/genome/: genome_equality.cpp  genome_initialization.cpp  genome_serialization.cpp
tests/unit/neural_network/: neural_network_calculation.cpp  neural_network_copy_and_move.cpp  neural_network_equality.cpp  neural_network_initialization.cpp  neural_network_randomization.cpp  neural_network_serialization.cpp
tests/unit/neuron/: neuron_calculation.cpp  neuron_copy_and_move.cpp  neuron_equality.cpp  neuron_initialization.cpp  neuron_randomization.cpp  neuron_serialization.cpp
tests/unit/population/: population_collisions.cpp  population_copy_and_move.cpp  population_equality.cpp  population_initialization.cpp  population_reproduction.cpp  population_serialization.cpp  population_update.cpp
tests/unit/resources/: resources_equality.cpp  resources_initialization.cpp  resources_serialization.cpp
tests/unit/surroundings/: surroundings_test.cpp
tests/unit/ui/: state.cpp
tests/unit/util/: file.cpp  math.cpp  serialization.cpp
tests/unit/world/: world_bounds_and_spawn.cpp  world_copy_and_move.cpp  world_equality.cpp  world_initialization.cpp  world_serialization.cpp
